# data_imputer

./: .gitignore  Makefile  __main__.py  pyproject.toml  requirements.txt
data_imputer/: __init__.py  imputer.py  prediction.py  utils.py
data_imputer/config/: config_imputation.json  config_learning.json  config_prediction.json
data_imputer/fitted_model/living_building_spb_140822_080633_160125_120940_1/: lift_GBDT.joblib
data_imputer/fitted_model/living_building_spb_140822_080633_160125_122034_1/: electricity_GBDT.joblib  gascentral_GBDT.joblib  hotwater_GBDT.joblib  lift_GBDT.joblib  population_GBDT.joblib
data_imputer/fitted_model/living_building_spb_200125_131720_1/: electricity_GBDT.joblib  floors_GBDT.joblib  gascentral_GBDT.joblib  hotwater_GBDT.joblib  living_area_GBDT.joblib  population_GBDT.joblib
data_imputer/fitted_model/living_building_spb_4326_160125_133814_1/: electricity_GBDT.joblib  floors_GBDT.joblib  gascentral_GBDT.joblib  hotwater_GBDT.joblib  lift_GBDT.joblib  population_GBDT.joblib
data_imputer/fitted_model/test_living_building_spb_160125_165001_1/: electricity_GBDT.joblib  floors_GBDT.joblib  gascentral_GBDT.joblib  hotwater_GBDT.joblib  lift_GBDT.joblib  population_GBDT.joblib
data_imputer/fitted_model/test_living_building_spb_170125_154853_1/: electricity_GBDT.joblib  floors_GBDT.joblib  gascentral_GBDT.joblib  hotwater_GBDT.joblib  lift_GBDT.joblib  population_GBDT.joblib
data_imputer/quality_score/: quality_score_living_building_spb_200125_131720.json  quality_score_test_living_building_spb_170125_154853.json
(+30 files in other folders)
