[tool.poetry]
name = "data-imputer"
version = "0.1.0"
description = ""
authors = ["Ruslan Babayev <rus.babaef@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
geopandas = "^1.0.1"
joblib = "^1.4.2"
scikit-learn = "^1.6.0"
scipy = "^1.14.1"
tqdm = "^4.67.1"
xgboost = "^2.1.3"
numpy = "1.26.4"
pandas = "2.1.0"


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
isort = "^5.13.2"
pylint = "^3.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
